deploy/kubernetes/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: data-store
---
apiVersion: v1
kind: Namespace
metadata:
  name: web-api
